--- a/XOLIT.Productos.API/appsettings.Development.json
+++ b/XOLIT.Productos.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "CaseLinkDbContext": "Server=caselink-uat.cnv0nwwl9cp4.us-east-1.rds.amazonaws.com;Database=CASELINK;Trusted_Connection=False;User=sysSuper;password=Key12DG!"
+    "XOLOTDbContext": "Server=LAPTOP-K991GUOR;Database=CASELINK_QA;Trusted_Connection=False;User=sa;password=Complemento$0912"
   }
 }
