creacion de controladores de ventas y productos

--- a/XOLIT.Productos.API/appsettings.json
+++ b/XOLIT.Productos.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "XolitVentasDbContext": "Server=LAPTOP-K991GUOR;Database=XolitVentas;Trusted_Connection=False;User=sa;password=Complemento$0912"
+  },
   "AllowedHosts": "*"
 }
