--- a/XOLIT.Productos.API/appsettings.Development.json
+++ b/XOLIT.Productos.API/appsettings.Development.json
@@ -1,5 +1,4 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "XOLOTDbContext": "Server=LAPTOP-K991GUOR;Database=CASELINK_QA;Trusted_Connection=False;User=sa;password=Complemento$0912"
+    "XolitVentasDbContext": "Server=LAPTOP-K991GUOR;Database=XolitVentas;Trusted_Connection=False;User=sa;password=Complemento$0912"
   }
 }
