Actualizacion de repositorios
-Creacion de repositrio de productos
- Renombramiento de proyecto solucion

--- a/XOLIT.Productos.API/XOLIT.ShoppingCart.API.csproj
+++ b/XOLIT.Productos.API/XOLIT.ShoppingCart.API.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\XOLIT.Productos.Infrastructure\XOLIT.Productos.Infrastructure.csproj" />
+    <ProjectReference Include="..\XOLIT.Productos.Infrastructure\XOLIT.ShoppingCart.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
