--- a/XOLIT.Productos.Infrastructure/XOLIT.ShoppingCart.Infrastructure.csproj
+++ b/XOLIT.Productos.Infrastructure/XOLIT.ShoppingCart.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\XOLIT.Productos.Domain\XOLIT.ShoppingCart.Domain.csproj" />
   </ItemGroup>
 
 </Project>
