--- a/XOLIT.Productos.API/XOLIT.ShoppingCart.API.csproj
+++ b/XOLIT.Productos.API/XOLIT.ShoppingCart.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.0" />
@@ -15,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\XOLIT.Productos.Application\XOLIT.ShoppingCart.Application.csproj" />
     <ProjectReference Include="..\XOLIT.Productos.Infrastructure\XOLIT.ShoppingCart.Infrastructure.csproj" />
+    <ProjectReference Include="..\XOLIT.ShoppingCart.Commond\XOLIT.ShoppingCart.Commond.csproj" />
   </ItemGroup>
 
 </Project>
