--- a/XOLIT.Productos.Application/XOLIT.ShoppingCart.Application.csproj
+++ b/XOLIT.Productos.Application/XOLIT.ShoppingCart.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\XOLIT.Productos.Domain\XOLIT.ShoppingCart.Domain.csproj" />
+    <ProjectReference Include="..\XOLIT.Productos.Infrastructure\XOLIT.ShoppingCart.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
